Bug 47802 - FILEOPEN: Runtime Error
Summary: FILEOPEN: Runtime Error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: Other Windows (All)
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:3.6.0 target:3.5.3 target:...
Keywords: filter:rtf, regression
: 47720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-24 07:28 UTC by Ivan
Modified: 2015-12-17 12:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Error (17.21 KB, image/jpeg)
2012-03-24 07:30 UTC, Ivan
Details
Doc-error (78.18 KB, image/jpeg)
2012-03-24 07:34 UTC, Ivan
Details
doc file (94.00 KB, application/msword)
2012-03-24 07:35 UTC, Ivan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan 2012-03-24 07:28:05 UTC
Problem description: 

I try to open the file http://www.sbrf.ru/common/img/uploaded/files/pdf/legal/Blank_plat_por_val.rtf
and get an error error.jpg
If I open this file in microsoft office then save it (.doc), and then open it in libre I have the wrong file content.

Sorry for my English.
           
Browser: Opera/9.80 (Windows NT 5.2; U; ru) Presto/2.10.229 Version/11.61
Comment 1 Ivan 2012-03-24 07:30:08 UTC
Created attachment 58971 [details]
Error
Comment 2 Ivan 2012-03-24 07:34:33 UTC
Created attachment 58972 [details]
Doc-error
Comment 3 Ivan 2012-03-24 07:35:40 UTC
Created attachment 58973 [details]
doc file
Comment 4 s-joyemusequna 2012-03-24 09:43:40 UTC
Confirmed : LibO 3.5.2 RC1 crashes while loading the RTF file http://www.sbrf.ru/common/img/uploaded/files/pdf/legal/Blank_plat_por_val.rtf

LibO 3.4.5 : file totally messed up 

LibO 3.3.4, OOo 3.1 : file nearly usable (2 pages instead of one, second page is empty

(I confirm the problems with the doc file (attachment 3) too, but it is another bug and should be filed separately)
Comment 5 Miklos Vajna 2012-04-10 02:18:08 UTC
Reproduced, assign to me.
Comment 6 Not Assigned 2012-04-10 06:54:04 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=95803f44cfa0dc62b500e931e401e0593b0c3eae

fdo#47802 fix crash on RTF import of shapes inside tables
Comment 7 Miklos Vajna 2012-04-10 07:01:09 UTC
The above commit should fix the crash on RTF import and the import result should be on par with 3.3.
Comment 8 Not Assigned 2012-04-16 09:05:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=08a54e148d56542cdb3603234dc72f2620969a4f&g=libreoffice-3-5

fdo#47802 fix crash on RTF import of shapes inside tables


It will be available in LibreOffice 3.5.3.
Comment 9 Miklos Vajna 2012-05-04 02:42:52 UTC
*** Bug 47720 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2013-07-01 09:52:02 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d892671c118158490b08d24eea7398330a23599b

fdo#47802 testcase



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2013-11-06 10:27:09 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f1a0a006810f7c9dbd270c7767cf331b1c901f5

Related fdo#47802: Bring the 8bit and 16bit .doc on par.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Robinson Tryon (qubit) 2015-12-17 12:05:31 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]