fdo#47802 fix crash on RTF import of shapes inside tables

We already ignore textframes inside tables, the same should be done with
textboxes till they can be handled properly.